15.sep (ws)
      - fix #12012: Undo doesn't work after changing value of grace note
      - fix #11778: Stroke on multiple acciaccatura doesn't appear after save
      - fix #11779: Stroke of multiple acciaccatura immobile and incorrect
14.sep (ws)
      - fix #12547: Ottava line property menu missing
      - fix #12522: Mid-measure bar lines in qst stave list by saving and re-loading
      - new style parameter in editor: minimum measure width
      - incremented file version to 1.23: add length property to measure for
        irregular measures
      - fix #12520: Note heads don't highlight during playback
13.sep (ws)
      - new function: "Save Selected"
      - fix #12527: nudget time sig gets more and more displaced at each save and re-load
12.sep (lv)
      - fix #12437: R4754 MusicXML issues: keysig imports in first staff only
       (ws)
      - fix #12483: Score doesn't pan during playback
11.sep (lv)
      - fix MusicXML import/export of voltas (trunk regression in rev 4734)
10.sep (lv)
      - fix iotest for MusicXML _ref.xml files
7.sep (ws)
      - first implementation of metronome; missing: icon, volume
      - fix 12447: Changing volta text doesn't work
6.sep (ws)
      - new simple plugin manager in "Preferences->Plugins":
        plugins now have to be configured to be loaded on mscore startup
      - fix 12218: shared noteheads aren't shared
      - fix 12419: Ledger lines are still visible for invisible notes
      - fix 12428: Part name appears over the staves
      - fix 12430: edit style does not set score dirty bit
      - fix 12429: crash loading V1 scores
5.sep (ws)
      - fix #12137: Extending length of note into non-existing bar in part causes crash
      - fix #12202: Page settings (patch from lasconic)
      - fix #12395: Several issues with property pop menu (patch from Miwarre)
      - implemented spanners (haipins etc.) for linked parts
4.sep (lv)